@@ -696,7 +696,6 @@ if [ "$DO_MOD" -gt 0 ]; then
 		ln -s ../var/tmp/ethers "${FILESYSTEM_MOD_DIR}/etc/ethers"
 		ln -s ../var/tmp/exports "${FILESYSTEM_MOD_DIR}/etc/exports"
 		ln -s ../var/tmp/gshadow "${FILESYSTEM_MOD_DIR}/etc/gshadow"
-		ln -s ../var/tmp/onlinechanged "${FILESYSTEM_MOD_DIR}/bin/onlinechanged" > /dev/null 2>&1
 
 		echo1 "installing libs"
 			for i in \
